cosmos-local-service/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cosmos-loc-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cosmos-loc-service
  template:
    metadata:
      labels:
        app: cosmos-loc-service
    spec:
      containers:
        - name: cosmos-loc-service
          image: amdevops36/cosmos-loc-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8087
---
apiVersion: v1
kind: Service
metadata:
  name: cosmos-loc-service
  labels:
    app: cosmos-loc-service
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8087
      targetPort: 8087
  selector:
    app: cosmos-loc-service
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cosmos-loc-ingress
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /cosmos-loc-swagger
            pathType: Prefix
            backend:
              service:
                name: cosmos-loc-service
                port:
                  number: 8087
          - path: /loc-apis
            pathType: Prefix
            backend:
              service:
                name: cosmos-loc-service
                port:
                  number: 8087
          - path: /cosmos-loc-swagger
            pathType: Prefix
            backend:
              service:
                name: cosmos-loc-service
                port:
                  number: 8087

          - path: /cosmos-loc-openapi
            pathType: Prefix
            backend:
              service:
                name: cosmos-loc-service
                port:
                  number: 8087
